# amethyst-action-game-3d

./: .gitignore  .travis.yml  Cargo.toml  README.MD  amethyst-action-game-3d.nix  default.nix  flake.nix  shell.nix
assets/mesh/: tank.gltf  tank.mtl  underground_base.gltf
assets/prefab/: renderable.ron
assets/texture/: basic_map.ron  basic_map_spritesheet.ron
assets/ui/: loading.ron  main_menu.ron
examples/: gltf_nodes.rs
resources/: display_config.ron  input.ron
src/: assets.rs  game.rs  graphics.rs  grid_of_sprites.rs  level.rs  main.rs  player.rs  replace_material.rs  simple_level.rs  sprite_grid.rs  states.rs  underground_base.rs
src/systems/: debug.rs  material_replace.rs  mod.rs  player_movement.rs  ui.rs  underground_base_control.rs
src/utils/: mod.rs  print_gltf_prefab.rs
