[package]
name = "amethyst-action-game-3d"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.10.0"
amethyst_gltf = "*"
genmesh = "0.6"
gltf = "*"
ron = "0.4"
serde = { version = "1", features = ["serde_derive"] }

[[bin]]
name = "action-game-3d"
path = "src/main.rs"

[[bin]]
name = "simple-level"
path = "src/simple_level.rs"
