[package]
name = "amethyst-action-game-3d"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { version = "0.14.0", features = ["vulkan"] }
amethyst_gltf = "*"
err-derive = "< 0.1.6"
genmesh = "0.6"
gltf = "*"
nalgebra = "0.19"
ron = "0.4"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "action-game-3d"
path = "src/main.rs"

[[bin]]
name = "simple-level"
path = "src/simple_level.rs"
